<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NewEntryFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_new_entry"
        android:enabled="false"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_radio_group"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_check_24" />

    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <RadioButton
            android:id="@+id/der_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/der" />

        <RadioButton
            android:id="@+id/die_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/die" />

        <RadioButton
            android:id="@+id/das_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/das" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/noun_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/enter_noun_phrase_here"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gender_radio_group"
        app:layout_constraintTop_toTopOf="@id/gender_radio_group"
        app:layout_constraintBottom_toBottomOf="@id/gender_radio_group"
        />


</androidx.constraintlayout.widget.ConstraintLayout>